--- a/style.css
+++ b/style.css
@@ -1119,7 +1119,7 @@ textarea {
 }
 
 .image_gallery-break {
-	width: 67%;
+	width: 70%;
 	background-color: #333;
 	margin: 0.8rem auto 1rem auto;
 }
@@ -1138,4 +1138,33 @@ textarea {
 	color: white;
 	font-size: 0.8rem;
 	text-align: center;
+}
+
+/* footer */
+.custom-footer {
+	width: 70%;
+	margin: 3rem auto;
+	display: flex;
+	justify-content: space-between;
+}
+
+.footer_title {
+	margin: 0px;
+	font-size: 1.3rem;
+	font-weight: 500;
+}
+
+.footer_info {
+	width: 60%;
+}
+
+.footer_info p {
+	width: 80%;
+	margin-bottom: 0px;
+}
+
+.footer_info a {
+	color: #ef3313;
+	text-decoration: none;
+	margin: 0px;
 }
