feat: blog posts stylings

--- a/style.css
+++ b/style.css
@@ -1197,23 +1197,46 @@ textarea {
 .single_post {
 	height: 250px;
 	width: 100%;
-	border: 1px solid #ccc;
 	box-sizing: border-box;
+	margin-bottom: 3rem;
 }
 
-.single_post h3 {
+.single_post-header {
 	margin: 0rem;
 	box-sizing: border-box;
-	padding: 0.2rem;
 	background-color: #333;
+	padding: 0.2rem 0;
+	border-radius: 3px;
 	color: white;
 	font-weight: normal;
+	display: flex;
+	align-items: center;
+}
+
+.single_post-date {
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	margin-left: 1rem;
+}
+
+.single_post-date p{
+	margin: 0;
+	padding: 0;
+}
+
+.vl {
+  border-left: 1px solid white;
+  height: 100%;
+	padding: 2rem 0;
+	margin: 0 1rem;
 }
 
 .single_post-meta {
 	display: flex;
 	justify-content: space-between;
-	margin: 0.5rem 0.2rem;
+	margin: -2.2rem 0.2rem 0rem 0.2rem;
+	align-items: center;
 }
 
 .single_post-meta-author {
@@ -1226,7 +1249,7 @@ textarea {
 }
 
 .single_post-content {
-	width: 70%;
+	width: 100%;
 	margin: 0 0.2rem;
 }
 
@@ -1241,5 +1264,51 @@ textarea {
 .single_post-content a {
 	color: #ef3313;
 	text-decoration: none;
+	font-weight: normal;
 	margin: 0px;
+}
+
+.post-content {
+	display: flex;
+	align-items: center;
+}
+
+.post-divider {
+	margin-top: -0.8rem;
+	margin-bottom: 0.5rem;
+	background-color: #ccc;
+	border: 1px;
+}
+
+.post-img {
+	border-radius: 5px;
+	margin-top: 2.7rem;
+	height: auto;
+	max-width: 100%;
+}
+
+.post_img_container {
+	width: 300px;
+	height: 200px;
+}
+
+.post_details_container {
+	margin-left: 1rem;
+}
+
+.paginate {
+	display: flex;
+	justify-content: center;
+	margin-left: 9rem;
+	margin-bottom: 2rem;
+}
+
+.paginate span {
+	padding: 0.1rem 0.4rem;
+	margin-right: 2rem;
+}
+
+.paginate span:first-child {
+	background-color: rgb(240, 18, 83);
+	color: white;
 }
