--- a/style.css
+++ b/style.css
@@ -66,9 +66,18 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
+
 html {
 	line-height: 1.15;
 	-webkit-text-size-adjust: 100%;
+}
+
+:root {
+	--textcolor: #62585f;
+	--textshadow: 2px #fff;
+	--textcontentsize: 0.875rem;
+	--secondarycolor: #ef4634;
 }
 
 /* Sections
@@ -79,6 +88,7 @@ html {
  */
 body {
 	margin: 0;
+	font-family: 'Open Sans', sans-serif;
 }
 
 /**
@@ -115,7 +125,7 @@ hr {
  * 2. Correct the odd `em` font sizing in all browsers.
  */
 pre {
-	font-family: monospace, monospace;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 1em;
 }
 
@@ -403,7 +413,7 @@ select,
 optgroup,
 textarea {
 	color: #404040;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 1rem;
 	line-height: 1.5;
 }
@@ -1182,7 +1192,7 @@ textarea {
 	margin: auto;
 	display: grid;
 	grid-column-gap: 2rem;
-	grid-template-columns: 2fr 1fr;
+	grid-template-columns: 620px 1fr;
 }
 
 .blog-sidebar {
@@ -1299,7 +1309,6 @@ textarea {
 .paginate {
 	display: flex;
 	justify-content: center;
-	margin-left: 9rem;
 	margin-bottom: 2rem;
 }
 
@@ -1332,4 +1341,100 @@ textarea {
 	padding-bottom: 0.5rem;
 	padding-top: 0.4rem;
 	cursor: pointer;
+}
+/* Individual post */
+.individual_post h1 {
+	font-size: 1.888rem;
+	color: var(--textcolor);
+	text-shadow: var(--textshadow);
+}
+
+.individual_post-content p {
+	color: var(--textcolor);
+	font-size: var(--textcontentsize);
+	margin: 0;
+	line-height: 21px;
+}
+
+.individual_post-imgbox {
+	width: 38.75rem;
+}
+
+.individual_post-img {
+	max-width: 100%;
+	height: auto;
+	border-radius: 3px;
+}
+
+.individual_post-tags {
+	font-size: 13px;
+}
+.individual_post-tags span {
+	color: var(--secondarycolor);
+}
+.individual_post-tags:hover {
+	text-decoration: underline;
+}
+
+.individual_post-form {
+	display: flex;
+	justify-content: space-between;
+}
+
+.individual_post-textarea {
+	width: 620px;
+	height: 90px;
+	border: 1px solid var(--textcolor);
+}
+
+.form-i {
+	width: 195px;
+	height: 30px;
+	border:  1px solid var(--textcolor);
+}
+
+.btnbox {
+	display: flex;
+	justify-content: flex-end;
+}
+
+.form-btn {
+	padding: 10px;
+	border-radius: 5px;
+	background-color: #222;
+	font-size: 0.875rem;
+	color: white;
+}
+
+.comment_card-meta {
+	color: var(--textcolor);
+	font-size: 0.813rem;
+}
+
+.comment_card-reply p{
+	margin: 0px;
+}
+
+.comment_card-comment {
+	line-height: 21px;
+	font-size: 0.875rem;
+	color: var(--textcolor);
+	background-color: #fff;
+}
+
+.comment_card-author {
+	color: var(--secondarycolor);
+}
+
+.comment_card-author:hover {
+	text-decoration: underline;
+}
+
+.comment_card-reply {
+	display: flex;
+	justify-content: flex-end;
+}
+
+.fa {
+	color: #ccc;
 }
