--- a/style.css
+++ b/style.css
@@ -1342,7 +1342,7 @@ textarea {
 
 .post-img {
 	border-radius: 5px;
-	margin-top: 2.7rem;
+	margin-top: 2.3rem;
 	height: auto;
 	max-width: 100%;
 }
@@ -1489,4 +1489,74 @@ textarea {
 
 .fa {
 	color: #ccc;
+}
+
+/* sidebar */
+.sidebar_portfolio {
+		margin-bottom: 2rem;
+}
+
+.sidebar_portfolio-text {
+	font-size: 25px;
+	color: var(--textcolor);
+	text-shadow: 2px #fff;
+	margin: 0.5rem 0;
+	font-weight: normal;
+}
+
+.sidebar-break {
+	margin: 0.5rem 0;
+	background-color: var(--textcolor);
+}
+
+.sidebar_portfolio-grid {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-gap: 1rem;
+}
+
+.sidebar_portfolio-gitem {
+	border-radius: 5px;
+	width: 60px;
+	height: 50px;
+}
+
+.sidebar_portfolio-g1{
+	display: flex;
+	flex-direction: column;
+	grid-gap: 1rem;
+}
+
+.post-flex {
+	display: flex;
+	flex-direction: column;
+	margin-left: 1rem;
+}
+
+.post-flex p {
+	margin: 0;
+	font-size: 14px;
+	color: var(--textcolor);
+}
+
+.post-flex-meta span {
+	color: var(--secondarycolor);
+}
+
+.post-flex-meta {
+	font-size: 12px;
+	color: var(--textcolor);
+}
+
+.popular-flex {
+	display: flex;
+}
+
+.archive-s p {
+	margin: 0;
+	font-size: 13px;
+	color: var(--textcolor);
+}
+.archive-s p:hover {
+	color: var(--secondarycolor);
 }
