--- a/style.css
+++ b/style.css
@@ -2042,6 +2042,11 @@ border-radius: initial;
 	height: 50px;
 }
 
+.sidebar_portfolio-gitem a img {
+  width: 100%;
+  height: 100%;
+}
+
 .sidebar_portfolio-g1{
 	display: flex;
 	flex-direction: column;
