--- a/style.css
+++ b/style.css
@@ -2267,3 +2267,33 @@ border-radius: initial;
 	display: inline-block;
 	margin-right: 10px;
 }
+
+
+/*archive page */
+.archive-header {
+	font-size: 1.888rem;
+	color: var(--textcolor);
+	text-shadow: var(--textshadow);
+	margin-top: 0.5rem;
+}
+
+.archive-content p{
+	color: var(--textcolor);
+	font-size: var(--textcontentsize);
+	margin-bottom: 0.8rem;
+	line-height: 21px;
+}
+
+.archive-thumbnail img {
+	width: 100%;
+	height: 500px;
+}
+
+.archive-footer {
+	color: var(--textcolor);
+	font-size: var(--textcontentsize);
+	margin-bottom: 0.8rem;
+	line-height: 21px;
+}
+
+
