--- a/style.css
+++ b/style.css
@@ -2310,3 +2310,55 @@ border-radius: initial;
 	margin-bottom: 0.8rem;
 	line-height: 21px;
 }
+
+.portfolio-tabs:active{
+	background-color: var(--secondarycolor);
+}
+
+.portfolio-images {
+	position: relative;
+  }
+
+.portfolio-images-overlay {
+	position: absolute;
+	top: 0;
+	bottom:0;
+	left: 0;
+	right: 0;
+	height: 50%;
+	width: 50%;
+	opacity: 0;
+	transition: .3s ease;
+  }
+  
+  .portfolio-images:hover .portfolio-images-overlay {
+	opacity: 1;
+  }
+  
+  .icon {
+	color: white;
+	font-size: 40px;
+	position: absolute;
+	right: 50%;
+	bottom: 50%;
+	top: 70%;
+	left: 85%;
+	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	text-align: center;
+  }
+
+  .fa-eye:hover {
+	color: #eee;
+  }
+
+  .fa-eye::after {
+	content: 'View image';
+	font-size: 0.675rem;
+	white-space: nowrap;
+	position: absolute;
+	display: block;
+	text-decoration: none;
+	color: white;
+	font-weight: 500;
+  }
